# odyssey-game

./: .gitignore  NPCShip_Usage_Example.md  NPC_SPAWNING_SYSTEM_SUMMARY.md  README.md
Docs/: GDD.md  OMEN_Cosmic_Expansion.md  SETUP.md  Storyline.md  TDD.md
Docs/Development/: commit-workflow.md
Odyssey/: COMBAT_SYSTEM_README.md  HEALTH_DAMAGE_SYSTEM_README.md  IMPLEMENTATION_SUMMARY.md  Odyssey.uproject  PROJECT_SUMMARY.md  README.md  SETUP.md
Odyssey/Config/: DefaultDeviceProfiles.ini  DefaultEngine.ini  DefaultGame.ini
Odyssey/Content/Data/: CraftingRecipes.json  MarketPrices.json  README.md  ResourceDataTable.json  TutorialSteps.json  (+1 more)
Odyssey/Source/: OdysseyEditor.Target.cs  OdysseyTarget.cs
Server/: package-lock.json  package.json
Server/src/: config.ts  crafting-messages.ts  crafting.ts  galaxy.ts  index.ts  inventory.ts  market-messages.ts  market.ts  mining.ts  player.ts  protocol.ts  resource-node.ts  server.ts  simulation.ts  types.ts  zone.ts
Server/test/: test-client.ts
ServerRS/: Cargo.toml
ServerRS/src/: config.rs  main.rs
ServerRS/src/game/: galaxy.rs  mod.rs  player.rs  resource_node.rs  simulation.rs  zone.rs
ServerRS/src/msg/: auth.rs  combat.rs  crafting.rs  docking.rs  equipment.rs  market.rs  mod.rs  npc.rs  quest.rs  types.rs
ServerRS/src/net/: connection.rs  protocol.rs
ServerRS/src/persistence/: mod.rs
ServerRS/src/systems/: combat.rs  combat_manager.rs  crafting.rs  docking.rs  equipment.rs  market.rs  mining.rs  mod.rs  npc.rs  npc_spawner.rs  progression.rs  quest.rs  quest_database.rs  quest_tracker.rs  weapon.rs
(+205 files in other folders)
